--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4082,6 +4082,7 @@ header li.nav-icon .cart-table-list a {
 
 .thumb .widget-tags a {
     color: #fff;
+    font-size: 12px;
 }
 
 .widget-tags a {
