--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4130,10 +4130,12 @@ header li.nav-icon .cart-table-list a {
 .thumb .widget-tags {
     display: inline-block;
     width: 100%;
+    max-height: 90%;
+    overflow: hidden;
     position: absolute;
     left: 0;
     bottom: 0;
-    padding-left: 10px;
+    padding-left: 5px;
     opacity: 0;
 }
 
