--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -13,7 +13,6 @@ html {
     bottom: 0;
     width: 100%;
     height: 100%;
-    margin: auto;
     background: url('https://bing.img.run/1920x1080.php') center center / cover no-repeat fixed;
     display: flex;
     align-items: center;
@@ -36,7 +35,7 @@ html {
     z-index: 1;
     transform: scale(1);
     transition: transform 0.3s ease;
-    margin: 100px auto 20px auto;
+    margin: 10px 0 20px 0;
 }
 
 .auth-container {
@@ -308,10 +307,6 @@ a:hover {
 }
 
 @media screen and (max-width: 768px) {
-    .login {
-        padding: 20px;
-    }
-
     .login-wrapper {
         width: 100%;
         display: flex;
@@ -493,51 +488,21 @@ a:hover {
     margin-bottom: 8px;
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-width: 768px) {
     .login-wrapper {
-        transform: scale(0.8);
+        width: 150rem;
     }
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-width: 480px) {
     .login-wrapper {
-        transform: scale(0.7);
+        width: 150rem;
     }
 }
 
-@media screen and (max-height: 500px) {
+@media screen and (max-width: 360px) {
     .login-wrapper {
-        transform: scale(0.6);
-    }
-}
-
-@media screen and (max-height: 400px) {
-    .login-wrapper {
-        transform: scale(0.5);
-    }
-}
-
-@media screen and (max-height: 300px) {
-    .login-wrapper {
-        transform: scale(0.4);
-    }
-}
-
-@media screen and (max-height: 200px) {
-    .login-wrapper {
-        transform: scale(0.3);
-    }
-}
-
-@media screen and (max-height: 100px) {
-    .login-wrapper {
-        transform: scale(0.2);
-    }
-}
-
-@media screen and (max-height: 0px) {
-    .login-wrapper {
-        transform: scale(0.1);
+        width: 150rem;
     }
 }
 
