--- a/assets/css/star.css
+++ b/assets/css/star.css
@@ -1,4 +1,8 @@
 .widget-tags {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
@@ -6,10 +10,6 @@
     z-index: 2;
     display: none;
     text-align: center;
-}
-
-.widget-tags:hover {
-    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .delete-btn {
@@ -20,6 +20,7 @@
     padding: 5px 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 10px;
 }
 
 .delete-btn:hover {
@@ -28,8 +29,65 @@
 
 @media (hover: none) {
     .portfolio-item {
-        -webkit-touch-callout: none; /* 禁用iOS长按菜单 */
-        -webkit-user-select: none;   /* 禁用文本选择 */
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
         user-select: none;
     }
 }
+
+.portfolio {
+    margin: 0 auto;
+}
+  
+.portfolio-item {
+    width: 24%;
+    margin-bottom: 10px;
+    break-inside: avoid;
+    transition: transform 0.4s ease, top 0.4s ease, left 0.4s ease;
+}
+
+@media (max-width: 768px) {
+    .portfolio-item {
+    width: 40%;
+    }
+}
+  
+.thumb {
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+}
+  
+.img-item {
+    width: 90%;
+    height: auto;
+    display: block;
+    transition: transform 0.3s ease;
+}
+
+/* 桌面端四列 */
+.portfolio-item {
+    width: calc(25% - 10px);
+    break-inside: avoid;
+  }
+  
+  /* 中等屏幕三列 */
+  @media (max-width: 1200px) {
+    .portfolio-item {
+      width: calc(33.333% - 10px);
+    }
+  }
+  
+  /* 平板端两列 */
+  @media (max-width: 768px) {
+    .portfolio-item {
+      width: calc(50% - 10px);
+    }
+  }
+  
+  /* 手机端单列 */
+  @media (max-width: 480px) {
+    .portfolio-item {
+      width: 100%;
+    }
+  }
